[gd_scene load_steps=3 format=3 uid="uid://cianatc218hkd"]

[ext_resource type="Script" path="res://interface/MapItem.gd" id="1_p32ax"]

[sub_resource type="LabelSettings" id="LabelSettings_imluj"]
font_size = 12
font_color = Color(0.620167, 0.620167, 0.620167, 1)

[node name="MapItem" type="HBoxContainer" node_paths=PackedStringArray("_name_label", "_seed_label", "_size_label")]
custom_minimum_size = Vector2(194, 60)
offset_right = 210.0
offset_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
script = ExtResource("1_p32ax")
_name_label = NodePath("Load/Container/VBoxContainer/Name")
_seed_label = NodePath("Load/Container/VBoxContainer/HBoxContainer/Seed")
_size_label = NodePath("Load/Container/VBoxContainer/HBoxContainer/Size")

[node name="Load" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(194, 60)
layout_mode = 2

[node name="Container" type="MarginContainer" parent="Load"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 194.0
offset_bottom = 60.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Load/Container"]
layout_mode = 2

[node name="Name" type="Label" parent="Load/Container/VBoxContainer"]
layout_mode = 2
text = "Exemplo"

[node name="HBoxContainer" type="HBoxContainer" parent="Load/Container/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Size" type="Label" parent="Load/Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pequeno"
label_settings = SubResource("LabelSettings_imluj")

[node name="VSeparator" type="VSeparator" parent="Load/Container/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Seed" type="Label" parent="Load/Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Semente: 1000000"
label_settings = SubResource("LabelSettings_imluj")

[node name="Delete" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 4
text = "Apagar"

[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="resized" from="Load/Container" to="." method="_on_container_resized"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
